modal started, fixed horizontal scroll implement

--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
 html {height: 100%;}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
 body {
     font-family: area-normal;
     font-weight: 400;
@@ -113,6 +134,7 @@ nav {
         flex-direction: column;
         align-items: flex-start;
         width: 350px;
+        height: 85vh;
         grid-area: index;
     }
     nav {margin-top: 5em;}
@@ -140,10 +162,10 @@ nav {
     main {
         grid-template-rows: none;
         grid-template-areas:
-                    "header header"
-                    "index feature"
-                    "index feature"
-                    "index feature"
-                    "index feature";
+                    "header header header"
+                    "index feature feature"
+                    "index feature feature"
+                    "index feature feature"
+                    "index feature feature";
     }
 }
